htdocs/layout/css/csrdelft.css
/**** GENERAL *****************************************************************/
body, html, p, a, img, h1, h2, h3, h4, ul, li, form, fieldset, input{
	margin: 0;
	padding: 0;
}
body, textarea, input, select, option, tr, td, th, div, p {
	text-align: justify;
}
body{
	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
	font-size: 11px;
	text-align: center;
}
#main{
	width: 1004px;
	margin: 0 auto;
}
#mainleft{
	width: 210px;
}
#mainright{
	padding: 10px 0;
}

.scroll-fixed {
	position: fixed;
	top: 0;
}

h1{
	font-size: 1.6em;
}
h1.formTitle{
	font-size: 1.6em;
	margin-bottom: 20px;
}
p{
	margin-bottom: 1em;
}

abbr.timeago{ border: none; }
abbr.timeago:hover{ border-bottom: 1px dotted grey; }

a{color: #0a338d; text-decoration: none;}
a:hover{color: #0a338d; text-decoration: underline;}
a.external{
	background-image: url('http://plaetjes.csrdelft.nl/layout/external-link-red.png');
	background-repeat: no-repeat;
	background-position: center right;
	padding-right: 14px;
}

div{ margin: 0; padding: 0; }

th{ text-align: left; }
td{ vertical-align: top; padding: 0; }
ul, ol{ }
li{margin: 0 0 0 15px;}
li li{ font-size: 1em;}
hr{
	height: 1px; background-color: black;
	border: 0 none;
}
.clear{	clear: both; }
.verborgen{ display: none; }

.scrollpane{ overflow: auto; }
.small{ font-size: smaller; }
.lichtgrijs{ color: #aaa; }
ul.horizontal li{
	display: inline;
	padding-right: 20px;
}
ul.horizontal li.active{ font-weight:bold; }
ul.nobullets li{ list-style-type: none; }

.dragobject:active{
	cursor: move;
}
.outer-shadow{
	-moz-box-shadow: 0 0 20px #000000;
	-webkit-box-shadow: 0 0 20px #000000;
	box-shadow: 0 0 20px #000000;
}

.fade-content{
	opacity: 0;
	-webkit-transition: opacity .3s .1s ease;
	-moz-transition: opacity .3s .1s ease;
	-ms-transition: opacity .3s .1s ease;
	-o-transition: opacity .3s .1s ease;
	transition: opacity .3s .1s ease;
}
.fade-container:hover .fade-content{
	opacity: 1;
}

/**** POPUP ********************************************************************/
#popup{
	display: none;
	position: fixed;
	width: 500px;
	z-index: 11;
	padding: 50px;
	background-color: white;/*
	background-image: url("http://plaetjes.csrdelft.nl/layout/beeldmerk.jpg");
	background-position: top right;
	background-repeat: no-repeat;*/
}
#popup-background{
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 10;
	opacity: 0.5;
	background-color: black;/*
	background-image: url("http://plaetjes.csrdelft.nl/layout/loading_bar_black.gif");*/
	background-position: 50% 300px;
	background-repeat: no-repeat;
}

/**** MENU ********************************************************************/
#menu{
	margin: 0 auto;
	padding: 10px 0 0;
	width: 966px;
	height: 142px;
}
#menuleft{
	float: left;
	width: 259px;
	height: 142px;
}
#beeldmerk{
	background-repeat: no-repeat;
	width: 133px;
	height: 133px;
	border: 0;
	margin: 4px 30px 0;
}
#menucenter{
	float: left;
	width: 553px;
	height: 142px;
}

/**** MENU BANNER *************************************************************/
#menubanners, #menubanners .menubanner{
	margin: 2px 0;
	width: 553px;
	height: 106px;
}
#banner1{
	display: none;
}
#banner2{
	display: none;
}
#banner3{
	display: none;
}
#banner4{
	display: none;
}

/**** MAIN MENU ***************************************************************/
#mainmenu{
	line-height: 0; /*Fix voor Opera*/
	list-style-type: none;
}
#mainmenu li{
	display: inline;
	float: left;
}
#mainmenu a{
	line-height: 27px;
	overflow: visible;
	display: block;
	text-align: center;
	font-size: 13px;
	width: 122px;
	height: 32px;
	font-weight: bold;
	text-decoration: none;
	background-repeat: no-repeat;
}
#mainmenu a:link, #mainmenu a:visited{
	color: #ffffff;
}
#mainmenu a:hover, #mainmenu a:active, #mainmenu a.active{
	background-repeat: no-repeat;
}

/**** SUBMENU *****************************************************************/
#submenu{
	margin: 0 auto;
	width: 966px;
	height: 24px;
}

#submenuitems{
	padding-top: 5px;
}
#submenuitems div{
	display: none;
	float: right;
	margin-right: 50px;
}
#submenuitems span.separator{
	background-image: url('http://plaetjes.csrdelft.nl/layout/submenuseperator.gif');
	background-repeat: no-repeat;
	background-position: center;
}
#sub1, #sub2, #sub3, #sub4{
	display: none;
}
#sub1.active, #sub2.active, #sub3.active, #sub4.active{
	display: block;
}
#submenu img{
	margin-top: 4px;
	vertical-align: top;
}
#submenu a{
	padding: 3px 2px;
	font-size: 12px;
	text-decoration: none;
}
#submenu a:link, #submenu a:visited{
	color: #fff;
}
#submenu a:hover, #submenu a:active, #submenu a.active{
	color: #e8cf2a;
}

/**** MENU RIGHT **************************************************************/
#menuright{
	float: right;
	width: 138px;
	height: 142px;
	position: relative;
}
#key img{
	float: right;
	padding: 10px;
	border: 0;
	cursor: pointer;
}
#ingelogd{
	color: #fff;
	margin-top: 7px;
	width: 133px;
	text-align: left;
}
#ingelogd a{ color: #fff; }
#profiellink{ float: left; }
#uitloggen{ float: right; clear: right; }
.instellingen{ float: right; }

#saldi{clear: both; padding-top: 4px;}
#saldi .saldo{ float: right; }
#saldi .staatrood{ color: red; }

#adminding{
	border: 1px solid white;
	background-color: #3262D7;
	padding: 1px 2px;
	margin-top: 4px;
	cursor: pointer;
	height: 13px;
	padding: 2px;
	text-align: center;
}


#adminding div{
	display: none;

	position: relative; 
	left: -3px; top: 1px;
	width: 200px; min-height: 50px;
	z-index: 99;
	border: 1px solid white; 
	background-color: #3262D7;
	padding: 5px;
}
#adminding span.queues{
	float: right;
	display: block;
	width: 60px;
	overflow-x: hidden;
}

#zoekveld{
	width: 127px;
	text-align: left;
	padding: 2px;
	position: absolute;
	top: 115px;
	background-image: url('http://plaetjes.csrdelft.nl/search-bg.png');
	background-position: 100% 50%;
	background-repeat: no-repeat;
}
#login{
	margin-right: 10px;
	float: right;
}
#login fieldset{
	border: 0;
}
/* ... */

